# talet_android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kr/talet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/talet_engine/: discovery_engine.cpp  discovery_engine.h  network_utils.cpp  network_utils.h
app/src/main/java/com/kr/talet/: DeviceAdapter.java  DeviceItem.java  H264ScreenStreamer.java  H264StreamActivity.java  H264StreamService.java  IntentFileHelper.java  MainActivity.java  StreamIntentCache.java  UdpScreenSender.java
app/src/main/res/layout/: activity_main.xml  device_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kr/talet/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
